typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement16.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement16.ts:2:20
  |
2 | for (var {a, b} of X) {
  |                    ^

